--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <title>End Workplace Racism</title>
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css" type="text/css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -24,11 +24,14 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <li class="nav-item home-item active">
+            <a class="nav-link">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+          <li class="nav-item about-item">
+            <a class="nav-link">About Us</a>
+          </li>
+          <li class="nav-item resources-item">
+            <a class="nav-link">Resources</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" target=”_blank” href="http://chng.it/4WKNc7wct6">Petition</a>
@@ -36,12 +39,23 @@
         </ul>
       </div>
     </nav>
-    <div id="landing">
-      <div class="text-vertical-center">
-        <h1>End Workplace Racism</h1>
-        <h2>Here are some of my major discoveries:</h2>
+    <div class="home">
+      <div id="landing">
+        <div class="text-vertical-center">
+          <h1>End Workplace Racism</h1>
+          <h2>Here are some of my major discoveries:</h2>
+        </div>
+      </div>
+      <div class="homeDiscoveries">
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vRZaNtaqov1tcs06attnb3WKT9a81ycgzmV83fQTwa2ApZDBetA9VcRh7iFbPC9j8t6QlU5aI71UK7i/pub?embedded=true"></iframe>
+        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT_zKEjb-JyQmNwzA5vtViw5CoX7O57-j-UvUpLpSxLKgnTxcVWjO15agPcUEhmuBo8TX7yk8aExH_o/pubhtml?widget=true&amp;headers=false"></iframe>
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vTijkDJaU1dQCDcEwapTSTq8Y-tFou3pMioNNDFnvno2MMSiJ82sbPExKAAWSwCtDy62yjwpEq9Vx9m/pub?embedded=true"></iframe>
       </div>
     </div>
+    <div class="about">
+      
+    </div>
+    <div class="resources"></div>
   </div>
 </body>
 
