Add info to about us and resources page

--- a/index.html
+++ b/index.html
@@ -53,9 +53,23 @@
       </div>
     </div>
     <div class="about">
-      
+      <h1 style='text-align:center;'>About Us</h1>
+      <h2 style='text-align:center;'>Mission: To End Workplace Racial Discrimination</h2>
+      <h2 style='text-align:center;'>The Proposal</h2>
+      <p>More workers would be informed of their rights if they had to go to worker's rights sessions. In my data collection, I discovered that many people would be willing to attend mandatory workers rights sessions. Therefore, this idea may actually work. Lastly for those who would not have the time to attend the sessions, a website could be created for them to learn their rights and their login would be recorded with a timestamp. These sessions would occur every three months.</p>
     </div>
-    <div class="resources"></div>
+    <div class="resources">
+      <h1 style='text-align:center;'>Resources</h1>
+      <ul>
+        <li>
+          <a target=”_blank” href="https://www1.nyc.gov/site/cchr/index.page">https://www1.nyc.gov/site/cchr/index.page</a>
+        </li>
+        
+        <li>
+          <a target=”_blank” href="https://www.eeoc.gov/laws/types/race_color.cfm">https://www.eeoc.gov/laws/types/race_color.cfm</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </body>
 
